julianbe PSQA Sprint 9

--- a/apps/authentication/values-iam-microgateway.yaml
+++ b/apps/authentication/values-iam-microgateway.yaml
@@ -3,7 +3,7 @@ iam:
     spec:
       source:
         repoURL: https://ergon.github.io/airlock-helm-charts
-        targetRevision: 2.2.1
+        targetRevision: 3.0.0
         chart: microgateway
 
     resources:
@@ -11,6 +11,12 @@ iam:
 
     helm:
       values:
+        image:
+          repository:
+            runtime: docker.ergon.ch/airlock/airlock-microgateway
+            configbuilder: docker.ergon.ch/airlock/airlock-microgateway-configbuilder
+          tag: 3.0.0.sprint9_Build009
+
         fullnameOverride: iam-microgateway
 
         resources:
