--- a/example/community.yaml
+++ b/example/community.yaml
@@ -8,16 +8,16 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/julianbe/airlock-minikube-example.git
-    targetRevision: v3.2.0
+    repoURL: https://github.com/jubeergon/airlock-minikube-example.git
+    targetRevision: microgateway-3.0.0
     path: apps/minikube-example/
 
     helm:
       values: |
         spec:
           source:
-            repoURL: https://github.com/julianbe/airlock-minikube-example.git
-            targetRevision: v3.2.0
+            repoURL: https://github.com/jubeergon/airlock-minikube-example.git
+            targetRevision: microgateway-3.0.0
 
           syncPolicy:
             automated:
